# selfsignedcert

./: CLAUDE.md  Cargo.toml  README.md  build.sh  index.html
docs/: index.html  yew-app-54625ec9cd88406f.js  yew-app-54625ec9cd88406f_bg.wasm
src/: main.rs
