[package]
name = "yew-app"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.22.0", features = ["csr"] }

# Certificate generation — pure Rust, WASM-compatible (no ring/C deps)
p256      = { version = "0.13", features = ["ecdsa", "pkcs8"] }
ecdsa     = { version = "0.16", features = ["der"] }
# sha2 oid feature required so SigningKey<NistP256> satisfies DynSignatureAlgorithmIdentifier
sha2      = { version = "0.10", features = ["oid"] }
x509-cert = { version = "0.2",  features = ["builder", "pem"] }
der       = { version = "0.7",  features = ["pem"] }
spki      = "0.7"
pkcs8     = { version = "0.10", features = ["pem"] }

# Randomness — getrandom js feature wires OsRng to crypto.getRandomValues()
rand_core  = "0.6"
getrandom  = { version = "0.2", features = ["js"] }

# Web bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "Event",
    "HtmlElement", "HtmlAnchorElement", "HtmlInputElement",
    "InputEvent", "KeyboardEvent", "MouseEvent",
    "Url", "Blob", "BlobPropertyBag",
    "File", "FileList",
] }
js-sys = "0.3"

# Date handling (wasm-bindgen feature enables now_utc() in the browser)
time = { version = "0.3", features = ["wasm-bindgen"] }
